# louvre

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
common/: Cargo.toml
common/src/: lib.rs
common_derive/: Cargo.toml
common_derive/src/: deps.rs  lib.rs  runnable.rs
core/: Cargo.toml
core/src/: collection.rs  lib.rs  meta.rs  platform.rs  prelude.rs  title.rs  twitch.rs  worker.rs
core/src/commands/: config.rs  media.rs  mod.rs  pegasus.rs  scrape.rs
core/src/config/: clap.rs  env.rs  mod.rs  yaml.rs
core/src/igdb/: client.rs  platform.rs  schema.rs
core/src/pegasus/: collection.rs  game.rs  mod.rs  platform.rs
core/tests/: integration_tests.rs
fixtures/responses/: metadata.json
scripts/: build-android  dep  dot  fix  push-android  release  run  ssh-android  tag  termux-run  test
scripts/aux/: core.bash
src/: components.rs  lib.rs  meta.rs  platform.rs  prelude.rs  title.rs  twitch.rs
src/commands/: config.rs  scrape.rs
src/config/: clap.rs  mod.rs  yaml.rs
src/igdb/: client.rs  mod.rs  schema.rs
src/pegasus/: collection.rs  game.rs  platform.rs
tests/: integration_tests.rs
