[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
directories-next = "2.0.0"
anyhow = "1.0.55"
tracing = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.16", optional = true }
serde_json = { version = "1.0.81", optional = true }
tracing-subscriber = "0.3.11"

[features]
default = []
yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]